// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: CC-BY-4.0

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/csscolorparser-zig
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-04-28

=== Added

* Initial release