@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.0\...HEAD[Unreleased]
+
+=== Fixed
+
+* Change `Color.name()` to return `null` if the given color is not fully opaque
+  ({pull-request-url}/4[#4])
+
 == {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-04-28
 
 === Added
